--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="24dp"
-            android:text="@string/question1"/>
+            android:id="@+id/question_text_view" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +34,25 @@
                 android:layout_height="wrap_content"
                 android:text="@string/false_button"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <ImageButton
+                android:contentDescription="@string/previous_question"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/previous_button"
+                android:src="@mipmap/arrow_left"/>
+            <ImageButton
+                android:contentDescription="@string/next_question"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/next_button"
+                android:src="@mipmap/arrow_right"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
